...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Your Name" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uc7-ZJ-42M">
                                <rect key="frame" x="43" y="331.5" width="328" height="39"/>
                                <color key="backgroundColor" systemColor="systemGray2Color"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Your Phone Number" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CUu-Kz-ylv">
                                <rect key="frame" x="43" y="378" width="328" height="39"/>
                                <color key="backgroundColor" systemColor="systemGray2Color"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Your Address" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="Dee-cj-qF4">
                                <rect key="frame" x="43" y="424.5" width="328" height="39"/>
                                <color key="backgroundColor" systemColor="systemGray2Color"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="26"/>
                                <state key="normal" title="Register">
                                    <color key="titleColor" name="PrimaryColor"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                <state key="normal" title="Already have an account?">
                                    <color key="titleColor" name="PrimaryColor"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                                <state key="normal" title="Submit Order">
                                    <color key="titleColor" name="PrimaryColor"/>
                                </state>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Cart" image="cart" catalog="system" id="9vE-Ap-0pv"/>
                    <connections>
                        <outlet property="navigationBar" destination="hkg-kl-xhs" id="GAl-EB-Adb"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="26"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" name="PrimaryColor"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                                <state key="normal" title="Log out">
                                    <color key="titleColor" name="PrimaryColor"/>
                                </state>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Profile" image="person" catalog="system" id="HfG-7f-1T1"/>
                    <connections>
                        <outlet property="addressLabel" destination="T5A-4n-YoH" id="FYX-4K-mRh"/>
...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                <state key="normal" title="Add to Cart">
                                    <color key="titleColor" name="PrimaryColor"/>
                                </state>
...
