...
    }
    
    struct Alert {
        static let title = "Error"
        static let confirmationTitle = "Are you sure?"
        static let cartTitle = "Cart"
        static let orderTitle = "Thank You"
        static let orderMessage = "Your order has been received. We will deliver it to you as soon as possible."
        static let notificationMessage = "Your order has been delivered. Thank you for choosing us."
        static let reservationMessage = "Your reservation has been made. We will wait for you in \(K.Information.appName)"
        static let invalidFieldMessage = "Please enter a valid name, phone, and address."
        static let userDoesNotExist = "User does not exist. Please register."
        static let userAlreadyExists = "User already exists. Try login or register with another number."
...
